[package]
name = "minisign"
version = "0.5.22"
authors = ["Frank Denis <github@pureftpd.org>", "Daniel Rangel <daniel@rangel.in>", "ChristopherA@LifeWithAlacrity.com"]
description = "rust-minisign with support for Tor onion keys."
edition = "2018"
license = "MIT"
readme = "README.md"
categories = ["cryptography"]
keywords = ["command-line", "sign", "publickey", "cryptography", "minisign", "Tor"]
repository = "hhttps://github.com/BlockchainCommons/torgap-sig"

[dependencies]
getrandom = { version = "0.2", default-features = false }
scrypt = { version = "0.4", default-features = false }
base32 = "0.4.0"
sha3 = "0.9.1"

[target.'cfg(any(windows, unix))'.dependencies]
rpassword = "5.0"

[profile.dev]
lto = "thin"
opt-level = 3

[profile.test]
lto = "thin"
opt-level = 3

[profile.bench]
lto = true
opt-level = 3

[profile.release]
lto = true
panic = "abort"
opt-level = 3
